# sqlgen

./: README.md
example/: CMakeLists.txt  main.c  mydb.sqlgen
sqlgen/: CMakeLists.txt  sqlgen.c
tests/: CMakeLists.txt  delete.cpp  delete.sqlgen  exists.cpp  exists.sqlgen  insert.cpp  insert.sqlgen  migrations.cpp  migrations.sqlgen  select_all.cpp  select_all.sqlgen  select_first.cpp  select_first.sqlgen  update.cpp  update.sqlgen  upsert.cpp  upsert.sqlgen
